# assurity-demo

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  claims_ocr_processor.py  document_classifier.py  document_vision_classifier.py  donut_processor.py  env.example  evaluate_donut.py  evaluate_vision_classifier.py  llm_processor.py  pyproject.toml  run_claims_ocr.py  streamlit_app.py  train_document_classifier.py
benchmarks/: image.py  ocr.py
data/: ocr-test-credentials.json
data/claims/input/: Burris 1500 forms.tif  GoodUB04.1_Page_1.tiff  GoodUB04.1_Page_3.tiff  GoodUB04.2_Page_1.tiff  GoodUB04.2_Page_2.tiff  GoodUB04.2_Page_3.tiff  GoodUB04.2_Page_4.tiff  GoodUB04.3_Page_1.tiff  GoodUB04.3_Page_2.tiff  GoodUB04.3_Page_3.tiff  HCFA.1.tiff  HCFA.2.tiff  HCFA.3.tif  HCFA.4.tif  HCFA.5.tif  Perfect UB04.tiff  UB04 Forconi 2023.tif  UB04 Matlock.tif  UB04 Morrison.tif  Wilson 1500 form.tif  itemized billing1.tif  itemized billing2.tif  itemized billing3.tif
data/claims/output/: Burris 1500 forms.json  GoodUB04.1_Page_1.json  GoodUB04.1_Page_3.json  GoodUB04.2_Page_1.json  GoodUB04.2_Page_2.json  GoodUB04.2_Page_3.json  GoodUB04.2_Page_4.json  GoodUB04.3_Page_1.json  GoodUB04.3_Page_2.json  GoodUB04.3_Page_3.json  HCFA.1.json  HCFA.2.json  HCFA.3.json  HCFA.4.json  HCFA.5.json  Perfect UB04.json  UB04 Forconi 2023.json  UB04 Hill not great quality.json  UB04 Matlock.json  UB04 Morrison.json  Wilson 1500 form.json  batch_results_20250228_132435.json  batch_results_20250228_135616.json  classification_summary_all_classifiers_all_ocr_20250228_132435.csv  classification_summary_all_classifiers_all_ocr_20250228_135616.csv  itemized billing1.json  itemized billing2.json  itemized billing3.json
data/results/: results.json
demo/: claims.py  pipeline_runner.py  results.py  session.py  utils.py
notebooks/: AnalyzeClaimsStatusOutputs.ipynb  CalculateAccuracyMetrics.ipynb  Donut.ipynb  Google Vision.ipynb  MistralGeminiSonnetGPT.ipynb  OCR.ipynb  Smoldocling.ipynb  Tesseract.ipynb
res/: group_benefits.csv  individual_benefits.csv
res/demo/4151474402/: ClaimHistory.json
res/demo/4151494776/: ClaimHistory.json
res/demo/4151519875/: ClaimHistory.json
res/demo/4151582003/: ClaimHistory.json
res/ocr/: 4151474402_202408200011.json  4151494776_202503150055.json  4151519875_202501250026.json  4151582003_202502060010.json
src/assurity_demo/: config.py  pipeline.py
src/assurity_demo/models/: __init__.py  benefits.py  claim.py  output.py  policy.py
src/assurity_demo/processors/: claim_processor.py  ocr_processor.py
src/assurity_demo/utils/: file.py  helpers.py
src/assurity_poc/: config.py  demo.py  demo_batch.py  extract.py  main.py  match_policy_and_claim.py  ocr_benchmark.py  pipeline.py  run_pipeline.py  streamlit_app.py  utils.py
src/assurity_poc/callbacks/: promptlayer_callback.py
src/assurity_poc/models/: __init__.py  base.py  benefits.py  claim.py  common.py  output.py  policy.py
src/assurity_poc/parsers/: __init__.py  base.py  base_parser.py  claim_parser.py  document_parser.py  policy_parser.py
src/assurity_poc/processors/: claim_processor.py  dit.py  donut.py  image_matching.py  ocr_processor.py
src/assurity_poc/scripts/: batch_processor.py
src/assurity_poc/scripts/commands/: __init__.py  calculate_adjudication_metrics.py  convert_and_prepare_files.py  run_adjudication_pipeline.py  run_ocr_pipeline.py
src/assurity_poc/utils/: claim_utils.py  file.py  helpers.py  text.py
src/insurance_claims_ocr/: config.py  dit.py  donut.py  image_benchmark.py  image_matching.py  main.py  models.py  ocr_benchmark.py  ocr_pipeline.py  streamlit_app.py  utils.py
