[tool.poetry]
name = "insurance-claims-ocr"
version = "0.1.0"
description = "An automated pipeline for OCR processing of insurance claims documents"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
opencv-python = "^4.7.0"
pytesseract = "^0.3.10"
pillow = "^9.5.0"
numpy = "^1.24.0"
pdf2image = "^1.17.0"
scikit-learn = "^1.2.2"
joblib = "^1.2.0"
transformers = "^4.28.1"
torch = "^2.0.0"
pandas = "^2.2.3"
openai = "^1.1.0"
python-dotenv = "^1.0.0"
langchain = "^0.1.0"
langchain-openai = "^0.0.5"
# Added for Donut model
timm = "^0.9.2"
sentencepiece = "^0.1.99"
protobuf = "^3.20.2"
google-cloud-vision = "^3.10.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 